# desktop-music-prod

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CODEX_STARTING_PROMPT.md  GOAL.md  LICENSE  README.md
.github/workflows/: ci.yml
docs/: AUDIO_MIDI_SETUP_UX.md  BUILDING.md  CI_ACTION_PIN_REVIEW.md  DEPENDENCIES.md  LINUX_JUCE_APP_PREREQUISITES.md  MACOS_CI_PREREQUISITES.md  MILESTONES.md  PACKAGE_MEDIA_CLEANUP_UX.md  PLUGIN_POLICY.md  REFERENCES.md  SOURCE_HEADER_POLICY.md  SPDX_EXCEPTIONS.txt  UX_PRINCIPLES.md
docs/adr/: ADR-0001-technology-stack.md  ADR-0002-core-manifest-json.md  ADR-0003-win32-fallback-verification-app.md  ADR-0004-app-session-boundary.md  ADR-0005-core-audio-engine-stub.md  ADR-0006-project-device-chain-placeholders.md  ADR-0007-project-manifest-backups.md  ADR-0008-project-license-strategy.md  ADR-0009-scheduled-generated-clip-playback.md  ADR-0010-prepared-mono-clip-buffer.md  ADR-0011-pcm16-wav-import-prepared-mono.md  ADR-0012-project-package-audio-import.md  ADR-0013-native-audio-import-ui-handoff.md  ADR-0014-background-audio-import-jobs.md  ADR-0015-audio-import-progress-cancel-state.md  ADR-0016-staged-project-package-writes.md  ADR-0017-cancellable-wav-decode-progress.md  ADR-0018-waveform-summary-analysis-metadata.md  ADR-0019-imported-waveform-thumbnail-rendering.md  ADR-0020-waveform-analysis-regeneration.md  ADR-0021-timeline-clip-lane-layout.md  ADR-0022-imported-audio-clip-placement.md  ADR-0023-timeline-loop-region-state.md  ADR-0024-loop-region-transport-advance.md  ADR-0025-loop-region-timeline-rendering.md  ADR-0026-imported-clip-timeline-playback-plan.md  ADR-0027-imported-timeline-play-command.md  ADR-0028-imported-playback-prepared-buffer-cache.md  ADR-0029-background-timeline-playback-preparation.md  ADR-0030-imported-media-cache-invalidation.md  ADR-0031-bounded-imported-playback-cache.md  ADR-0032-prepared-playback-cache-memory-budget.md  ADR-0033-timeline-preparation-progress-cancel-ui.md  ADR-0034-track-voice-scheduling-and-mixing-boundary.md  ADR-0035-stereo-prepared-voice-summing.md  ADR-0036-session-prepared-voice-window-playback.md  ADR-0037-background-voice-window-preparation.md  ADR-0038-persisted-track-mix-state.md  ADR-0039-static-track-mix-controls.md  ADR-0040-imported-audio-sample-rate-policy.md  (+66 more)
docs/issues/: NEXT-ISSUES.md
src/app/: Main.cpp  MainComponent.cpp  MainComponent.h
src/core/: AppCommandRegistry.cpp  AppCommandRegistry.h  AppSession.cpp  AppSession.h  AppSettings.cpp  AppSettings.h  AudioDeviceService.cpp  AudioDeviceService.h  AudioEngineStub.cpp  AudioEngineStub.h  AudioSetupStatus.cpp  AudioSetupStatus.h  BackgroundAudioImportJob.cpp  BackgroundAudioImportJob.h  BackgroundMediaRelinkPreparationJob.cpp  BackgroundMediaRelinkPreparationJob.h  BackgroundPackageMediaCleanupJob.cpp  BackgroundPackageMediaCleanupJob.h  BackgroundSaveAsPackageCopyJob.cpp  BackgroundSaveAsPackageCopyJob.h  BackgroundTimelinePlaybackPreparationJob.cpp  BackgroundTimelinePlaybackPreparationJob.h  BackgroundWaveformAnalysisJob.cpp  BackgroundWaveformAnalysisJob.h  ImportedClipInspector.cpp  ImportedClipInspector.h  ImportedClipInspectorEditDraft.cpp  ImportedClipInspectorEditDraft.h  ImportedClipMediaRelink.cpp  ImportedClipMediaRelink.h  ImportedMediaPackageInventory.cpp  ImportedMediaPackageInventory.h  PackageMediaCleanupBatchDiscovery.cpp  PackageMediaCleanupBatchDiscovery.h  PackageMediaCleanupStatus.cpp  PackageMediaCleanupStatus.h  PackageMediaMaintenanceBrowserRows.cpp  PackageMediaMaintenanceBrowserRows.h  PackageMediaMaintenanceViewModel.cpp  PackageMediaMaintenanceViewModel.h  (+41 more)
src/platform/win32/: Win32FallbackApp.cpp
tests/: ProjectNameTests.cpp
tools/: check_ci_artifact_contents.cmake  check_ci_artifact_contents_fixtures.cmake  check_ci_macos_artifact_upload_guard.cmake  check_ci_macos_artifact_upload_guard_fixtures.cmake  check_spdx.cmake  check_spdx_fixtures.cmake
